add smt new